--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="theme-color" content="#1976d2" />
   <title>Summit Crew Voice App</title>
 </head>
